samples/_failures_safe/1761508645_1ffee7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2493aa74.c: In function ‘main’:
./samples/SAFE/__tmp_2493aa74.c:157:15: error: expected ‘;’ at end of input
  157 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_2493aa74.c:157:9: error: expected declaration or statement at end of input
  157 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_2493aa74.c:157:9: error: expected declaration or statement at end of input
